# rust-gpu-experiments

./: Cargo.toml  README.md
.cargo/: config
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
models/: Cargo.toml
models/src/: lib.rs  texture.rs  vertex.rs
shader-builder/: Cargo.toml
shader-builder/src/: main.rs
shaders/mandelbrot/: Cargo.toml
shaders/mandelbrot/src/: lib.rs
shaders/textures/: Cargo.toml
shaders/textures/src/: lib.rs
shaders/triangle/: Cargo.toml
shaders/triangle/src/: lib.rs
textures/: Cargo.toml
textures/src/: main.rs
triangle/: Cargo.toml
triangle/src/: main.rs  state.rs  vertex.rs
viewport/: Cargo.toml
viewport/src/: lib.rs  render_pass_dresser.rs  viewport.rs
