[package]
name = "textures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
winit = "0.28"
wgpu = "0.15"
pollster = "0.2"
bytemuck = "1.12"
models = { path = "../models" }
viewport = { path = "../viewport" }
